--- a/redocly.yaml
+++ b/redocly.yaml
@@ -1,3 +1,4 @@
+# See https://redocly.com/docs/cli/configuration/ for more information.
 apis:
   sample@v1:
     root: docs/openapi.yaml
@@ -13,7 +14,7 @@ theme:
         primary:
           main: '#32329f'
     generateCodeSamples:
-      languages: 
+      languages: # Array of language config objects; indicates in which languages to generate code samples.
         - lang: curl
         - lang: Node.js
         - lang: JavaScript
