--- a/package.json
+++ b/package.json
@@ -19,17 +19,18 @@
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
+    "csv-parser": "^3.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "gravatar": "^1.8.2",
-    "jimp": "^0.22.12",
+    "jimp": "^1.6.0",
     "joi": "^17.13.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.3.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "nodemailer": "^6.9.13",
+    "nodemailer": "^7.0.10",
     "pino-http": "^10.3.0",
     "query-string": "^9.0.0",
     "swagger-ui-express": "^5.0.1"
