Edit get data for example

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,39 @@
-DB_URI = # Connection to MongoDB
-JWT_SECRET = # Secret key for token
+# Port for server
+PORT=
 
+# For DB
+DB_URI=
+MONGODB_USER=
+MONGODB_PASSWORD=
+MONGODB_URL=
+MONGODB_DB=
 
-CLOUDINARY_URL =
-CLOUDINARY_API_KEY =
-CLOUDINARY_API_SECRET =
+# For token
+JWT_SECRET=
 
-GOOGLE_CLIENT_ID =
-GOOGLE_CLIENT_SECRET =
-BACKEND_BASE_URL =
-FRONTEND_BASE_URL =
+# For send mail (Brevo)
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USER=
+SMTP_PASSWORD=
+SMTP_APIKEY=
+SMTP_FROM=
+
+# For save files (avatar) on Cloudinary
+CLOUDINARY_URL=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+CLOUDINARY_NAME=
+
+# For google login
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
+# URLs
+BACKEND_BASE_URL=
+FRONTEND_BASE_URL=
+APP_DOMAIN=
+
+#Flags
+REQUIRE_EMAIL_VERIFICATION=
+ENABLE_CLOUDINARY=
